Some major ui improvements

--- a/index.html
+++ b/index.html
@@ -85,30 +85,35 @@
               unless explicitly stated otherwise. By using any such software,
               users agree to the following terms:
             </p>
-            <ul>
+
+            <h3>Open-Source Conditions</h3>
+            All projects developed by Tinotenda Mhedziso are open-source, and
+            users are free to view, modify, and distribute the software,
+            provided that:
+            <ol style="margin-top: 10px">
               <li>
-                <strong>Open-Source Policy</strong>
-                : All projects are open-source, and users are free to view,
-                modify, and distribute the software, provided that:
-                <ol>
-                  <li>
-                    Attribution to the original creator (
-                    <strong>Tinotenda Mhedziso</strong>
-                    ) is included.
-                  </li>
-                  <li>
-                    The software is not distributed for personal financial gain
-                    under the pretense that it was created solely from scratch
-                    by the distributor.
-                  </li>
-                </ol>
+                Attribution to the original creator (
+                <strong>Tinotenda Mhedziso</strong>
+                ) is included if project use case is for any form of
+                distribution.
               </li>
               <li>
-                <strong>Prohibited Commercial Use</strong>
-                : Users may not sell or monetize the software without express
-                written consent from the creator.
+                In the event of external assets or assets not being owned by
+                Tinotenda Mhedziso: Attribution is reserved and given to the
+                correct third-party owner. All projects which use third-party
+                assets outline the attribution agreements in the
+                <strong>ReadMe Attribution</strong>
+                section.
               </li>
-            </ul>
+              <li>
+                The software is not distributed for personal financial gain
+                under the pretense that it was created solely from scratch by
+                the distributor.
+              </li>
+            </ol>
+            <h3>Prohibited Commercial Use</h3>
+            Users may not sell or monetize the software without express written
+            consent from the creator.
 
             <h2>2. Special Clause: "The Atlas Six"</h2>
             <p>
@@ -117,7 +122,7 @@
               <strong>Tinotenda Mhedziso</strong>
               . The following special conditions apply to this project:
             </p>
-            <ul>
+            <ol>
               <li>
                 <strong>Free to Play</strong>
                 : The game is free to play and use; however, it is not currently
@@ -127,7 +132,7 @@
                 <strong>Character Submission</strong>
                 : Users may submit their own characters to be included in the
                 game, subject to the following conditions:
-                <ol>
+                <ul>
                   <li>
                     <strong>Respectful Representation</strong>
                     : Users must represent the game and their characters
@@ -146,28 +151,11 @@
                     <strong>two weeks to one month</strong>
                     to fully take effect.
                   </li>
-                </ol>
+                </ul>
               </li>
-            </ul>
+            </ol>
 
-            <h2>3. Attribution Requirement</h2>
-            <p>
-              Any public use of software, assets, or components from
-              <strong>Tinotenda Mhedziso</strong>
-              must include proper attribution to the creator. This includes but
-              is not limited to:
-            </p>
-            <ul>
-              <li>
-                Displaying the creator's name in credits or acknowledgments.
-              </li>
-              <li>
-                Linking back to the original project or repository, where
-                applicable.
-              </li>
-            </ul>
-
-            <h2>4. User Accounts and Conduct</h2>
+            <h2>3. User Accounts and Conduct</h2>
             <p>
               To ensure a safe and respectful environment, users interacting
               across any domains or platforms owned by
@@ -220,7 +208,7 @@
               </li>
             </ol>
 
-            <h2>5. Legal Matters</h2>
+            <h2>4. Legal Matters</h2>
             <ul>
               <li>
                 <strong>Limitation of Liability</strong>
@@ -247,13 +235,13 @@
               </li>
             </ul>
 
-            <h2>6. Contact Information</h2>
+            <h2>5. Contact Information</h2>
             <p>
               For any questions or concerns regarding these Terms of Service,
               please contact:
             </p>
+            <strong>Tinotenda Mhedziso</strong>
             <ul>
-              <li><strong>Tinotenda Mhedziso</strong></li>
               <li>
                 Email:
                 <a href="#ContactSection">tinomhedziso21@gmail.com</a>
@@ -291,6 +279,8 @@
           </footer>
         </article>
       </div>
+      <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>Passion Notification<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< -->
+
       <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Terms of Service<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< -->
       <div id="Me">
         <h3>Hey,</h3>
@@ -319,19 +309,30 @@
           </div>
         </div>
         <!-- /* From Uiverse.io by eduardo-amaro-maciel */ -->
+
         <div class="flexBox">
-          <div class="actionBtn" id="Anime">
-            <span>Animations</span>
-          </div>
-          <div class="actionBtn" id="ToSbtn" onclick="toggleCheckList()">
-            <span>CheckList</span>
-          </div>
-          <div class="actionBtn" id="ToSbtn" onclick="openEmail()">
-            <span>Contact</span>
-          </div>
-          <div class="actionBtn" id="ToSbtn" onclick="showToS()">
-            <span>Terms</span>
-          </div>
+          <!-- From Uiverse.io by Li-Deheng -->
+          <a href="mailto:tinomhedziso21@gmail.com">
+            <button id="btn-message" class="button-message">
+              <div class="content-avatar">
+                <div class="status-user"></div>
+                <div class="avatar">
+                  <svg
+                    class="user-img"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24">
+                    <path
+                      d="M12,12.5c-3.04,0-5.5,1.73-5.5,3.5s2.46,3.5,5.5,3.5,5.5-1.73,5.5-3.5-2.46-3.5-5.5-3.5Zm0-.5c1.66,0,3-1.34,3-3s-1.34-3-3-3-3,1.34-3,3,1.34,3,3,3Z"></path>
+                  </svg>
+                </div>
+              </div>
+              <div class="notice-content">
+                <div class="username">Tino Mhedziso</div>
+                <div class="lable-message">Contact Me</div>
+                <div class="user-id">@passionOverpain</div>
+              </div>
+            </button>
+          </a>
         </div>
       </div>
       <nav>
@@ -360,25 +361,24 @@
             </a>
           </li>
           <li style="--i: 4; --clr: #04fc43">
-            <a href="#ContactSection">
-              <ion-icon name="mail-outline" title="Contact Me"></ion-icon>
-            </a>
-          </li>
-          <li style="--i: 5; --clr: #04fc43">
-            <a
-              href="https://www.linkedin.com/in/tinotenda-mhedziso/"
-              target="_blank">
+            <a id="Anime">
               <ion-icon
-                name="logo-linkedin"
-                title="My LinkedIn profile"></ion-icon>
+                name="accessibility-sharp"
+                title="Toggle Animations"></ion-icon>
             </a>
           </li>
-          <li style="--i: 6; --clr: #04fc43">
+          <li style="--i: 5; --clr: #04fc43" onclick="toggleCheckList()">
             <a>
               <ion-icon
-                onclick="openGitHub()"
-                name="logo-github"
-                title="My GitHub profile"></ion-icon>
+                name="list-circle-sharp"
+                title="Get to know me Quests"></ion-icon>
+            </a>
+          </li>
+          <li style="--i: 6; --clr: #04fc43" onclick="showToS()">
+            <a>
+              <ion-icon
+                name="shield-checkmark-sharp"
+                title="My Terms of Service"></ion-icon>
             </a>
           </li>
           <li style="--i: 7; --clr: #04fc43">
@@ -402,17 +402,23 @@
               src="Images/Me.webp"
               alt="This is my webiste profile picture"
               id="Tino" />
+
+            <i class="quote">
+              "Time is the gift that robs you of the present ~ Let me save you
+              some."
+            </i>
           </div>
           <div class="AboutC2">
             <h3 class="subTitle bounce">About Me</h3>
             <p>
-              Final year Bachelor of Information Technology student, JavaScript
-              developer and Open Source contributer. Creating my first software
-              program in high school established a deep connection for solving
-              problems with code. To me, programming is like conquering a
-              challenging video game boss—success often requires persistence,
-              learning, and adaptability. Each attempt sharpens my skills and
-              brings me closer to success.
+              Final year Bachelor of Information Technology student who enjoys
+              programming in JavaScript and contributing to open-source.
+              Creating my first software program in high school established a
+              deep connection for solving problems with code. To me, programming
+              is similar to conquering a challenging video game boss: success
+              often requires persistence, learning, and adaptability. Each
+              attempt sharpens my skillset, whilst experience teaches me more
+              intricate concepts.
             </p>
             <div class="Extra">
               <button
