--- a/index.html
+++ b/index.html
@@ -31,23 +31,30 @@
           <div class="flexBox">
             <img src="Images/Passion.webp" alt="" />
           </div>
-          <p class="card__title">All Quests Complete</p>
+          <p class="card__title">Welcome</p>
           <p class="card__description">
-            Heyyyy You, so I'm Passion, Tino's personalized AI chatbot. Welcome
-            to our (Tino and I) portfolio website. Just a couple of notes you should know:
-            <ol>
-              <li>The sunshine lookalike icon to your top right is the navigation menu.</li>
-              <li>I have prepared some optional quest like tasks for you to do to fimiliarize with this site as well as personal requests.</li>
-              <li>You can access these tasks through the to-do/checklist icon.</li>
-                <li>Anytime while you are on here you can interact with Me through the bottom right message icon.</li>
-            </ol>
-            <!-- Thank you for taking the time to fully engage with our website and
-            complete every quest action. This popup serves as a certification of
-            completion, promoting you from an internet guest to an internet
-            friend of ours. We will be adding more valuable rewards once our
-            game, The Atlas Six, reaches its public release stage, so do stay
-            connected. -->
+            Hey there! I'm Passion, Tino's personalized AI chatbot. Welcome to
+            our portfolio website. Here are a few things to keep in mind as you
+            explore:
           </p>
+          <ol class="leftText">
+            <li>
+              The sunshine-like icon at the top right is your navigation menu.
+            </li>
+            <li>
+              I've prepared some optional quest-like tasks to help you
+              familiarize yourself with the site, along with some personal
+              requests.
+            </li>
+            <li>
+              You can access these tasks through the to-do or checklist icon.
+            </li>
+            <li>
+              Feel free to interact with me anytime using the message icon at
+              the bottom right corner.
+            </li>
+          </ol>
+
           <!-- /* From Uiverse.io by devanshsatwara */ -->
           <div class="flexBox">
             <button class="ui-btn" onclick="hidePopUp()">
