--- a/index.html
+++ b/index.html
@@ -769,30 +769,58 @@
         </div>
       </section>
     </main>
-    <footer>
-      <section class="footer" id="FooterSection">
-        <div class="container">
-          <a href="mailto:tinomhedziso21@gmail.com">
-            <p class="email">
-              For
-              <span style="color: #04fc43">Any</span>
-              Inquiries
-              <br />
-              Feel free to
-              <span style="color: #04fc43">email me</span>
-              or ask my chatbot Passion.
-            </p>
-          </a>
-          <p class="Copyright">
-            All Rights Reserved © under
-            <span style="color: #04fc43">Tinotenda Mhedziso</span>
-            . A
-            <span style="color: #04fc43">Passion Over Pain</span>
-            product.
-          </p>
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-links">
+          <div class="footer-column">
+            <h4>About Us</h4>
+            <ul>
+              <li><a href="#about">Our Story</a></li>
+              <li><a href="#team">Team</a></li>
+              <li><a href="#careers">Careers</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h4>Support</h4>
+            <ul>
+              <li><a href="#faq">FAQ</a></li>
+              <li><a href="#contact">Contact Us</a></li>
+              <li><a href="#help">Help Center</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h4>Follow Us</h4>
+            <ul class="social-icons">
+              <li>
+                <a href="https://www.facebook.com" target="_blank">
+                  <i class="fab fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com" target="_blank">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com" target="_blank">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com" target="_blank">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </section>
+        <div class="footer-bottom">
+          <p>&copy; 2025 Tinotenda Mhedziso. All Rights Reserved.</p>
+          <a href="#" class="back-to-top">Back to Top</a>
+        </div>
+      </div>
     </footer>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
