--- a/index.html
+++ b/index.html
@@ -773,42 +773,42 @@
       <div class="footer-container">
         <div class="footer-links">
           <div class="footer-column">
-            <h4>About Us</h4>
+            <h4>Sections</h4>
             <ul>
-              <li><a href="#about">Our Story</a></li>
-              <li><a href="#team">Team</a></li>
-              <li><a href="#careers">Careers</a></li>
+              <li><a href="#about">About Me</a></li>
+              <li><a href="#SkillsSection">My Skills</a></li>
+              <li><a href="#ProjectSection">My Projects</a></li>
             </ul>
           </div>
           <div class="footer-column">
-            <h4>Support</h4>
+            <h4>Highlighted Skills</h4>
             <ul>
-              <li><a href="#faq">FAQ</a></li>
-              <li><a href="#contact">Contact Us</a></li>
-              <li><a href="#help">Help Center</a></li>
+              <li>Database Development</li>
+              <li>Desktop Applications Development</li>
+              <li>Web Applications Development</li>
             </ul>
           </div>
           <div class="footer-column">
             <h4>Follow Us</h4>
             <ul class="social-icons">
               <li>
-                <a href="https://www.facebook.com" target="_blank">
-                  <i class="fab fa-facebook"></i>
+                <a onclick="openDevTo()">
+                  <ion-icon name="reader-sharp"></ion-icon>
                 </a>
               </li>
               <li>
-                <a href="https://www.twitter.com" target="_blank">
-                  <i class="fab fa-twitter"></i>
+                <a onclick="openEmail()">
+                  <ion-icon name="mail-sharp"></ion-icon>
                 </a>
               </li>
               <li>
-                <a href="https://www.linkedin.com" target="_blank">
-                  <i class="fab fa-linkedin"></i>
+                <a onclick="openGitHub()">
+                  <ion-icon name="logo-github"></ion-icon>
                 </a>
               </li>
               <li>
-                <a href="https://www.instagram.com" target="_blank">
-                  <i class="fab fa-instagram"></i>
+                <a onclick="openLinkedIn()">
+                  <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
               </li>
             </ul>
