Updated card look

--- a/index.html
+++ b/index.html
@@ -395,6 +395,18 @@
               id="Tino" /> -->
             <div class="profile-box">
               <div class="profile-elements bg"></div>
+              <div class="profile-elements imgBx">
+                <img src="Images/Me.webp" alt="My profile picture" />
+              </div>
+              <div class="profile-elements name">
+                <h2>Tinotenda Mhedziso</h2>
+              </div>
+              <div class="profile-elements content">
+                <p>
+                  Time is the gift that robs you of the present. Let me save you
+                  some.
+                </p>
+              </div>
               <div class="profile-card"></div>
             </div>
           </div>
@@ -812,12 +824,10 @@
       integrity="sha512-wC/cunGGDjXSl9OHUH0RuqSyW4YNLlsPwhcLxwWW1CR4OeC2E1xpcdZz2DeQkEmums41laI+eGMw95IJ15SS3g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
-    -->
     <script>
       VanillaTilt.init(document.querySelector('.profile-box'), {
         max: 15,
-        speed: 400,
-        glare: true
+        speed: 400
       });
     </script>
   </body>
