--- a/index.html
+++ b/index.html
@@ -800,6 +800,10 @@
         <div class="footer-bottom">
           <p>&copy; 2025 Tinotenda Mhedziso. All Rights Reserved.</p>
           <a href="#" class="back-to-top">Back to Top</a>
+          <audio id="myMusic" controls>
+            <source src="Audio/Music/Goblin Encounter.mp3" type="audio/mpeg" />
+            Your browser does not support the audio element.
+          </audio>
         </div>
       </div>
     </footer>
