--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       </div>
       <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Terms of Service<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< -->
       <div id="Me">
-        <h3 onclick="playMusic()">Hey,</h3>
+        <h3 onclick="sendMessageToBot()">Hey,</h3>
         <h1 class="myName">
           I'm
           <span id="myNameTitle">Tinotenda Mhedziso</span>
@@ -303,27 +303,26 @@
 
         <div class="flexBox">
           <!-- From Uiverse.io by Li-Deheng -->
-          <a href="mailto:tinomhedziso21@gmail.com">
-            <button id="btn-message" class="button-message">
-              <div class="content-avatar">
-                <div class="status-user"></div>
-                <div class="avatar">
-                  <svg
-                    class="user-img"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24">
-                    <path
-                      d="M12,12.5c-3.04,0-5.5,1.73-5.5,3.5s2.46,3.5,5.5,3.5,5.5-1.73,5.5-3.5-2.46-3.5-5.5-3.5Zm0-.5c1.66,0,3-1.34,3-3s-1.34-3-3-3-3,1.34-3,3,1.34,3,3,3Z"></path>
-                  </svg>
-                </div>
+
+          <button id="btn-message" class="button-message" onclick="contactMe()">
+            <div class="content-avatar">
+              <div class="status-user"></div>
+              <div class="avatar">
+                <svg
+                  class="user-img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24">
+                  <path
+                    d="M12,12.5c-3.04,0-5.5,1.73-5.5,3.5s2.46,3.5,5.5,3.5,5.5-1.73,5.5-3.5-2.46-3.5-5.5-3.5Zm0-.5c1.66,0,3-1.34,3-3s-1.34-3-3-3-3,1.34-3,3,1.34,3,3,3Z"></path>
+                </svg>
               </div>
-              <div class="notice-content">
-                <div class="username">Tino Mhedziso</div>
-                <div class="lable-message">Contact Me</div>
-                <div class="user-id">@passionOverpain</div>
-              </div>
-            </button>
-          </a>
+            </div>
+            <div class="notice-content">
+              <div class="username">Tino Mhedziso</div>
+              <div class="lable-message">Contact Me</div>
+              <div class="user-id">@passionOverpain</div>
+            </div>
+          </button>
         </div>
       </div>
       <nav>
@@ -849,6 +848,14 @@
                       window.parent.postMessage({ action: "playMusic" }, "*");
                      }
                     });
+                    window.addEventListener("message", (event) => {
+                      if (event.data.action === "contactMe") {
+                        window.botpress.sendEvent({
+                           event
+                        });
+                      }
+                    });
+                    
                   </script>
                 </body>
               </html>'></iframe>
