--- a/index.html
+++ b/index.html
@@ -797,6 +797,7 @@
           </div>
         </div>
         <div class="footer-bottom">
+          <a class="textBtn" onclick="contactMe()">Contact Me</a>
           <p>&copy; 2025 Tinotenda Mhedziso. All Rights Reserved.</p>
           <a href="#" class="back-to-top">Back to Top</a>
           <button
