--- a/index.html
+++ b/index.html
@@ -26,9 +26,64 @@
     <header>
       <div class="modalBackground" id="passionModal">
         <div id="passionCard">
-          <!-- <ion-icon name="gift-sharp"></ion-icon> -->
-          <ion-icon name="help-circle-sharp" id="passionCardIcon"></ion-icon>
-          <div class="card__content" id="passionCardContent"></div>
+          <div class="card__content">
+            <h2 class="card__title">Site Navigation Guide</h2>
+            <p>
+              Hey there! I'm Passion, Tino's personalized AI chatbot. Welcome to
+              our portfolio website. Here are a few things to keep in mind as
+              you explore:
+            </p>
+            <table class="sitemap-table">
+              <tbody>
+                <tr>
+                  <td class="icon-cell">
+                    <img src="Images/computer.svg" alt="" />
+                  </td>
+                  <td class="description-cell">
+                    <p>
+                      This is the Home section, clicking here will take you back
+                      to the homepage.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="icon-cell">
+                    <img src="Images/computer.svg" alt="" />
+                  </td>
+                  <td class="description-cell">
+                    <p>
+                      This is the Projects section, where you can explore my
+                      work.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="icon-cell">
+                    <img src="Images/computer.svg" alt="" />
+                  </td>
+                  <td class="description-cell">
+                    <p>
+                      This is the Contact section, where you can reach out to
+                      me.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="icon-cell">
+                    <img src="Images/computer.svg" alt="" />
+                  </td>
+                  <td class="description-cell">
+                    <p>Click here to scroll back to the top of the page.</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="flexBox">
+            <button class="ui-btn" onclick="hidePopUp()">
+              <span>Return</span>
+            </button>
+          </div>
         </div>
       </div>
       <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>.Passion Modal<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< -->
@@ -296,7 +351,7 @@
             <input name="r" type="checkbox" id="TalktoPassionTask" disabled />
             <label for="TalktoPassionTask">Talk to Passion</label>
             <input name="r" type="checkbox" id="GitHubTask" disabled />
-            <label for="GitHubTask">Follow me on GitHub</label>
+            <label for="GitHubTask">Follow me: GitHub</label>
           </div>
         </div>
         <!-- /* From Uiverse.io by eduardo-amaro-maciel */ -->
